# finshmlserv

./: @1  Dockerfile  README.md  Untitled.ipynb  Untitled1.ipynb  fish.py  fishmodel.ipynb  fly.toml  pyproject.toml  r.txt  tre
LB/: @  @!
note/: .fish.py.swp  Untitled.ipynb  fish.py  fishmodel.ipynb  m_fishmodel.ipynb  model1.pkl  model15.pkl  model5.pkl
src/finshmlserv/: .main.py.swp  cli.py  cli_f.py  main.py
src/finshmlserv/model/: .manager.py.swp  manager.py  model1.pkl  model15.pkl  model25.pkl  model49.pkl  model5.pkl
