[project]
name = "finshmlserv"
version = "0.8.1"
description = "Serving Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fly.io"
authors = [
    {name = "lsiwh37249", email = "lsiwh37249@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]
