[project]
name = "finshmlserv"
version = "1.5.3"
description = "Serving Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fly.io"
authors = [
    {name = "lsiwh37249", email = "lsiwh37249@gmail.com"},
]
dependencies = [
    #    "typer>=0.12.5",
    #    "fire>=0.6.0",
    "pandas>=2.0.3",
    "pyarrow>=17.0.0",
    "fastparquet>=2024.2.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]

[project.scripts]
finshmlserv-ping = 'finshmlserv.cli:ping'
get-model-path = 'finshmlserv.cli:get_model_path'
prediction = "finshmlserv.cli:prediction"
prediction_f = "finshmlserv.cli_f:prediction_f"
